Fix loading of normalized vs unnormalized color palettes.